# interpret-pas-a-pas-prog-funcional

./: --list-options  .gitignore  BHCt.hs  HSDef.hs  HSEval.hs  HSFuncs.hs  HSInferenciaTipus.hs  HSParser.hs  HSTipus.hs  README.md  Todo.hs  bhct.cabal  prelude.hs  run_tests.py  run_tests.sh  tmp.out
memoria/: bibliografia.bib  clean.sh  memoria_tfg.aux  memoria_tfg.fdb_latexmk  memoria_tfg.fls  memoria_tfg.out  memoria_tfg.tex  memoria_tfg.toc
memoria/capitols/: GEP.aux  GEP.tex  abstract.tex  avaluacio.aux  avaluacio.tex  conclusions.aux  conclusions.tex  parser.aux  parser.tex  resultats.aux  resultats.tex  tipus.aux  tipus.tex
memoria/informe_seguiment/: informe.aux  informe.fdb_latexmk  informe.fls  informe.out  informe.tex  informe.xdv
tests/: test_ast.hs  test_ast.out  test_eval.hs  test_eval.out  test_eval_0.hs  test_eval_1.hs  test_eval_10.hs  test_eval_11.hs  test_eval_2.hs  test_eval_3.hs  test_eval_4.hs  test_eval_5.hs  test_eval_6.hs  test_eval_7.hs  test_eval_8.hs  test_eval_9.hs  test_type.hs  test_type.in  test_type.out  total_test.txt
